--- a/telemeta/htdocs/css/telemeta_ie.css
+++ b/telemeta/htdocs/css/telemeta_ie.css
@@ -1,9 +1,8 @@
 dl.listing {
-    width: 68em;
     clear: both;
     margin-top: .4em;
 }
 dl.listing dd {
-    width: 50em;
     margin-top: .2em;
+    border-color: #fff;
 }
